Added persistent volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,14 @@ db:
     - "27017:27017"
   command: "--smallfiles --logpath=/dev/null"
   restart: always
+  volumes:
+    - /rome/data
 web:
   build: .
   command: node app.js
   volumes:
     - /rome
+    - /rome/public
     - /rome/node_modules
   ports:
     - "3000:3000"
