--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "debug": "^2.2.0",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.13.4",
     "fs": "0.0.2",
     "mime-types": "^2.1.10",
