--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,20 @@
-db:
-  image: mongo
-  ports:
-    - "27017:27017"
-  command: "--smallfiles --logpath=/dev/null"
-  restart: always
-  volumes:
-    - /rome/data
-web:
-  build: .
-  command: node app.js
-  volumes:
-    - /rome
-    - /rome/public
-    - /rome/node_modules
-  ports:
-    - "3000:3000"
-  links:
-    - db
-  environment:
-    PORT: 3000
+version: '2'
+services:
+  db:
+    image: mongo
+    command: "--smallfiles --logpath=/dev/null"
+    restart: always
+    volumes:
+      - ./rome/data:/rome/data
+  romeserver:
+    build: .
+    command: node app.js
+    volumes:
+      - ./rome:/rome
+      - ./rome/public:/rome/public
+      - ./rome/node_modules:/rome/node_modules
+    links:
+      - db
+    environment:
+      PORT: 3000
+      DB_URL: "mongodb://db/rome"
